feat(bulldozer-client): properly set the theme for the whole app

--- a/apps/bulldozer-client/src/index.html
+++ b/apps/bulldozer-client/src/index.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
     />
   </head>
-  <body class="mat-typography smooth-transition">
+  <body class="mat-typography mat-app-background smooth-transition">
     <bd-root></bd-root>
   </body>
 </html>
