chore(bulldozer-client): unauthorized component design improved

--- a/apps/bulldozer-client/src/index.html
+++ b/apps/bulldozer-client/src/index.html
@@ -16,7 +16,9 @@
       rel="stylesheet"
     />
   </head>
-  <body class="mat-typography mat-app-background smooth-transition">
+  <body
+    class="mat-typography mat-app-background smooth-transition bg-contain bg-repeat bd-bg-image-0"
+  >
     <bd-root></bd-root>
   </body>
 </html>
