chore(bulldozer-client): more images more performances

--- a/apps/bulldozer-client/src/index.html
+++ b/apps/bulldozer-client/src/index.html
@@ -17,7 +17,7 @@
     />
   </head>
   <body
-    class="mat-typography mat-app-background smooth-transition bg-contain bg-repeat bd-bg-image-0"
+    class="mat-typography mat-app-background smooth-transition bd-bg-bricks"
   >
     <bd-root></bd-root>
   </body>
