chore(bulldozer-client): fonts improves

--- a/apps/bulldozer-client/src/index.html
+++ b/apps/bulldozer-client/src/index.html
@@ -9,11 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      as="font"
     />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
+      rel="preload"
+      as="font"
     />
   </head>
   <body
