chore(bulldozer-client): improves ui speed

--- a/apps/bulldozer-client/src/index.html
+++ b/apps/bulldozer-client/src/index.html
@@ -17,6 +17,10 @@
       rel="preload"
       as="font"
     />
+    <meta
+      name="description"
+      content="Bulldozer is a low code platform to build Solana programs powered by Anchor. Our goal is to make it possible for 'no-code' contracts to actually land. While making the experience fun and almost game-ish, with a bit of real-time collaboration to make things 🔥"
+    />
   </head>
   <body
     class="mat-typography mat-app-background smooth-transition bd-bg-bricks"
