feat(bulldozer-client): improving UI performance (#125)
* chore(bulldozer-client): more images more performances

* chore(bulldozer-client): fonts improves

* chore(bulldozer-client): incremented max lenght user profile image

* chore(bulldozer-client): unauthorituzed access component updated

* chore(bulldozer-client): improves ui speed

* chore(bulldozer-client): fixed logo size

--- a/apps/bulldozer-client/src/index.html
+++ b/apps/bulldozer-client/src/index.html
@@ -9,15 +9,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
-      rel="stylesheet"
+      rel="preload"
+      as="font"
     />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
+      rel="preload"
+      as="font"
+    />
+    <meta
+      name="description"
+      content="Bulldozer is a low code platform to build Solana programs powered by Anchor. Our goal is to make it possible for 'no-code' contracts to actually land. While making the experience fun and almost game-ish, with a bit of real-time collaboration to make things 🔥"
     />
   </head>
   <body
-    class="mat-typography mat-app-background smooth-transition bg-contain bg-repeat bd-bg-image-0"
+    class="mat-typography mat-app-background smooth-transition bd-bg-bricks"
   >
     <bd-root></bd-root>
   </body>
