--- a/apps/drill-web-client/src/index.html
+++ b/apps/drill-web-client/src/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>DrillWebClient</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  </head>
-  <body>
-    <drill-root></drill-root>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<title>DrillWebClient</title>
+		<base href="/" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+	</head>
+	<body class="bp-bg-bricks bp-color-white">
+		<drill-root></drill-root>
+	</body>
 </html>
