--- a/apps/drill-web-client/src/index.html
+++ b/apps/drill-web-client/src/index.html
@@ -6,8 +6,19 @@
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+			rel="preload"
+			as="font"
+		/>
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="preload"
+			as="font"
+		/>
 	</head>
-	<body class="bp-bg-bricks bp-color-white">
+	<body class="mat-app-background bp-bg-bricks bp-color-white">
 		<drill-root></drill-root>
 	</body>
 </html>
