chore: bump tailwind

--- a/apps/bulldozer-client/src/index.html
+++ b/apps/bulldozer-client/src/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Bulldozer</title>
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
-      rel="preload"
-      as="font"
-    />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="preload"
-      as="font"
-    />
-    <meta
-      name="description"
-      content="Bulldozer is a low code platform to build Solana programs powered by Anchor. Our goal is to make it possible for 'no-code' contracts to actually land. While making the experience fun and almost game-ish, with a bit of real-time collaboration to make things 🔥"
-    />
-  </head>
-  <body
-    class="mat-typography mat-app-background smooth-transition bd-bg-bricks"
-  >
-    <bd-root></bd-root>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<title>Bulldozer</title>
+		<base href="/" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+			rel="preload"
+			as="font"
+		/>
+		<link
+			href="https://fonts.googleapis.com/icon?family=Material+Icons"
+			rel="preload"
+			as="font"
+		/>
+		<meta
+			name="description"
+			content="Bulldozer is a low code platform to build Solana programs powered by Anchor. Our goal is to make it possible for 'no-code' contracts to actually land. While making the experience fun and almost game-ish, with a bit of real-time collaboration to make things 🔥"
+		/>
+	</head>
+	<body
+		class="mat-typography mat-app-background smooth-transition bp-bg-bricks"
+	>
+		<bd-root></bd-root>
+	</body>
 </html>
