refactor(core): change bg class names

--- a/apps/bulldozer-client/src/index.html
+++ b/apps/bulldozer-client/src/index.html
@@ -23,7 +23,7 @@
 		/>
 	</head>
 	<body
-		class="mat-typography mat-app-background smooth-transition bp-bg-bricks"
+		class="mat-typography mat-app-background smooth-transition bg-bp-bricks"
 	>
 		<bd-root></bd-root>
 	</body>
