--- a/apps/crane-web-client/src/index.html
+++ b/apps/crane-web-client/src/index.html
@@ -18,7 +18,7 @@
 			as="font"
 		/>
 	</head>
-	<body class="mat-app-background bp-bg-bricks bp-color-white">
+	<body class="mat-app-background bg-bp-bricks bp-color-white">
 		<crane-root></crane-root>
 	</body>
 </html>
