--- a/apps/drill-web-client/src/index.html
+++ b/apps/drill-web-client/src/index.html
@@ -5,7 +5,7 @@
 		<title>DrillWebClient</title>
 		<base href="/" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/x-icon" href="favicon.ico" />
+		<link type="image/x-icon" rel="icon" href="favicon.ico" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
@@ -18,7 +18,7 @@
 			as="font"
 		/>
 	</head>
-	<body class="mat-app-background bp-bg-bricks bp-color-white">
+	<body class="mat-app-background bg-bp-bricks bp-color-white">
 		<drill-root></drill-root>
 	</body>
 </html>
